--- a/package.json
+++ b/package.json
@@ -20,6 +20,18 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
-  }
+    "webpack-dev-server": "^3.1.10",
+    "webpack-hmr": "^1.0.2"
+  },
+  "dependencies": {
+    "hmr": "^0.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GasperIrman/SchoolProject.git"
+  },
+  "bugs": {
+    "url": "https://github.com/GasperIrman/SchoolProject/issues"
+  },
+  "homepage": "https://github.com/GasperIrman/SchoolProject#readme"
 }
